# U-Net

./: README.md  pyproject.toml  setup.cfg
dataset_tools/forest_segmentation/: clean.py
dataset_tools/water_bodies_segmentation/: clean.py  repair_masks.py
notebooks/: data_exploration.ipynb  placeholder.ipynb  train_unet.ipynb
src/unet/: __init__.py  train_unet.py  train_unet_utils.py  unet.py
src/unet/dataset/image_and_masks/: __init__.py  image_masks.py  transforms.py
src/unet/loss_functions/: __init__.py  focal_loss.py
src/unet/unet/: __init__.py  unet.py  unet_blocks.py  unet_decoder.py  unet_encoder.py
src/unet/unet_dataset/: file_utils.py
src/unet/unet_dataset/image_and_masks/: image_masks.py  transforms.py
src/unet/unet_dataset/mscoco/: mscoco_dataset.py
src/unet/unet_model/: __init__.py  unet.py  unet_blocks.py  unet_decoder.py  unet_encoder.py
tools/: __init__.py  evaluate.py  predict.py  train.py
