[metadata]
name = U-net
version = 0.0.1
author = Y. Natsume
author_email = None
description = U-Net from https://arxiv.org/pdf/1505.04597.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/U-Net
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/U-Net/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pillow
    torch
    torchvision
    pycocotools
    natsort
    tqdm

[options.packages.find]
where = src
