[metadata]
name = UNet
version = 0.0.1
author = Y. Natsume
author_email = None
description = Implementation of UNet image segmentation model from https://arxiv.org/pdf/1505.04597.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/UNet
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/UNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pillow
    torch
    torchvision
    pycocotools
    natsort
    tqdm

[options.packages.find]
where = src
